src/pages/CartPage/components/CartPage/CartPage.scss
@use '../../../../utils/variables' as *;
@use '../../../../utils/mixins' as *;

.cart-page {
  @include grid;

  grid-template-rows: auto;
  row-gap: 32px;

  padding-top: 24px;

  &__top {
    grid-column: 1 / 5;
    display: flex;
    flex-direction: column;
    gap: 24px;
  }

  &__items {
    grid-column: 1 / 5;

    display: flex;
    flex-direction: column;
    gap: 24px;
  }

  &__total {
    grid-column: 1 / 5;
  }

  &__empty {
    grid-column: 1 / 5;
  }
}

.cart-total {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;

  padding: 24px;
  border: 1px solid $color-elements;

  &__amount {
    // styleName: Desktop & Tablet/H2;
    font-family: $font-family;
    font-size: 32px;
    font-weight: 800;
    line-height: 41px;
    letter-spacing: -0.01em;
    text-align: center;
    color: $color-primary;
  }

  // &__item-count {
  // }
  &__divider {
    width: 100%;

    height: 1px;
    background-color: $color-elements;
    border: none;
  }
  &__checkout {
    display: flex;
    flex-grow: 1;

    width: 100%;
  }
}

.dialog {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;

  &__text {
    text-align: center;
  }

  &__buttons {
    display: flex;
    gap: 8px;
  }

  &__button {
    padding: 4px 8px;
    background-color: $color-white;
    border: 1px solid $color-icons-placeholders;
    color: $color-primary;

    // box-sizing: border-box;

    &:hover {
      background-color: $color-primary;
      border: 1px solid transparent;
      color: $color-white;
    }
  }
}

